[BUGFIX] Inline editable properties for documents not visible
When a property is inline editable directly on the document,
it's not visible in any way. Now a gray outline is displayed on
hover as well as a blue outline when focussed matching the behavior
of the content elements.

Releases: master, 1.1, 1.0
Fixes: NEOS-362
Original-Commit-Hash: 7784ea8ea0d9d7b69afd2584680f635eff6a9888

--- a/TYPO3.Neos/Resources/Private/Styles/_Content.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/_Content.scss
@@ -43,6 +43,18 @@
 	}
 }
 
+.neos-inline-editable {
+	outline-offset: 6px;
+
+	&:hover {
+		outline: 2px solid rgba(0, 0, 0, .2);
+	}
+
+	&.aloha-editable-active {
+		outline: 2px solid $blue !important;
+	}
+}
+
 button.neos-create-new-content {
 	position: relative;
 	z-index: 100;
